chore: create a server to use the api key

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,11 @@
 					<option value="mary">Inglês: Mary (Feminina)</option>
 				</select>
 
-				<textarea id="text" placeholder="Adicione o texto aqui"></textarea>
+				<textarea
+					id="text"
+					placeholder="Adicione o texto aqui"
+					required
+				></textarea>
 
 				<button onclick="textToSpeech()" class="converter-btn">Convert</button>
 			</div>
