--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 	<head>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,7 +47,9 @@
 					required
 				></textarea>
 
-				<button onclick="textToSpeech()" class="converter-btn">Convert</button>
+				<button onclick="textToSpeech()" class="converter-btn">
+					Converter
+				</button>
 			</div>
 		</div>
 
