chore: show application description on mobile

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 		<link rel="stylesheet" href="./styles/styles.css" />
 
-		<title>Texto para fala</title>
+		<title>Texto para voz</title>
 	</head>
 	<body>
 		<div class="app">
 			<h1>Texto para fala</h1>
 
 			<p class="description">
-				Converta textos em fala em dois idiomas: português e inglês. Você pode
+				Converta textos para voz em dois idiomas: português e inglês. Você pode
 				colar qualquer texto na caixa abaixo e clicar em converter, em instantes
 				o seu texto será falado no idioma e na voz desejada.
 			</p>
