chore: change app name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div class="app">
-			<h1>Texto para fala</h1>
+			<h1>Texto para voz</h1>
 
 			<p class="description">
 				Converta textos para voz em dois idiomas: português e inglês. Você pode
